gravity: Split window and engine
Split window into xcb, wayland, and base window classes.  Also,
split engine into a base, and vulkan sub-class.  Then added
event code to pass events from a window to a graphics engine.

Change-Id: I74fa235308d317d98e3bf0e8bcd1a370369da0fe

--- a/Sample-Programs/LunarGravity/CMakeLists.txt
+++ b/Sample-Programs/LunarGravity/CMakeLists.txt
@@ -1,3 +1,11 @@
+include_directories(
+    ${CMAKE_CURRENT_BINARY_DIR}
+    ${CMAKE_BINARY_DIR}
+    window
+    utils
+    .
+)
+
 if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
     add_definitions(-DVK_USE_PLATFORM_WIN32_KHR -DWIN32_LEAN_AND_MEAN)
     set(DisplayServer Win32)
@@ -87,18 +95,34 @@ generate_gravity_spv(simple_single_tex.vert simple_single_tex-vs.spv)
 generate_gravity_spv(simple_single_tex.frag simple_single_tex-fs.spv)
 
 if(WIN32)
-    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_CRT_SECURE_NO_WARNINGS -D_USE_MATH_DEFINES")
-    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_CRT_SECURE_NO_WARNINGS -D_USE_MATH_DEFINES")
+	set(GRAVITY_WINDOW_SRCS
+	    window/gravitywin32window.cpp
+	    window/gravitywin32window.hpp
+	    window/gravitywindow.cpp
+	    window/gravitywindow.hpp
+	)
+else()
+	set(GRAVITY_WINDOW_SRCS
+	    window/gravityxcbwindow.cpp
+	    window/gravityxcbwindow.hpp
+	    window/gravitywaylandwindow.cpp
+	    window/gravitywaylandwindow.hpp
+	    window/gravitywindow.cpp
+	    window/gravitywindow.hpp
+	)
 endif()
 
 add_executable(LunarGravity
                 ${CMAKE_CURRENT_BINARY_DIR}/resources/shaders/simple_single_tex-vs.spv
                 ${CMAKE_CURRENT_BINARY_DIR}/resources/shaders/simple_single_tex-fs.spv
-                lglogger.cpp
-                lglogger.hpp
-                lgwindow.cpp
-                lgwindow.hpp
-                lggfxengine.cpp
-                lggfxengine.hpp
+                utils/gravitylogger.cpp
+                utils/gravitylogger.hpp
+                utils/gravityevent.cpp
+                utils/gravityevent.hpp
+                ${GRAVITY_WINDOW_SRCS}
+                gravitygfxengine.cpp
+                gravitygfxengine.hpp
+                gravityvulkanengine.cpp
+                gravityvulkanengine.hpp
                 main.cpp)
 target_link_libraries(LunarGravity ${LIBRARIES})
